--- a/report/ai15_group61_report.tex
+++ b/report/ai15_group61_report.tex
@@ -8,22 +8,24 @@
 \usepackage{subfiles}
 
 \graphicspath{{pictures/}}
+\begin{document}
 
 \title{Sentence Generation using Two Models \\ \large{Project in the course DD2380 at KTH}}
 
-\author{\hspace*{-0.5cm}
+\author{
 Group 61\\ \\[0.05cm]
 \begin{tabular}{cccc}
 K. Hannesson & J. Jóhannsson & E. Ahlsén & J. Andersson\\
 August 20 & January 12 & February 9 & February 10 \\
 1982 & 1984 & 1988 & 1984 \\
-hannesso@kth.se & jokull@kth.se & edvarda@kth.se & jonand8@kth.se \\ \\[0.05cm]
+{\small hannesso@kth.se} & {\small jokull@kth.se} & {\small edvarda@kth.se} & {\small jonand8@kth.se} \\ \\[0.05cm]
 \includegraphics[width=0.13\linewidth]{photo_Kristofer} &
 \includegraphics[width=0.13\linewidth]{photo_Jokull} &
 \includegraphics[width=0.13\linewidth]{photo_Edvard} &
 \includegraphics[width=0.13\linewidth]{photo_Jonas}
 \\[0.7cm]
-\end{tabular}}
+\end{tabular}
+}
 
 % Normally there will not be any pictures but we want
 % these so that we can connect faces to names in the course
@@ -38,7 +40,7 @@ hannesso@kth.se & jokull@kth.se & edvarda@kth.se & jonand8@kth.se \\ \\[0.05cm]
 \rhead{K. Hannesson, J. Jóhannsson, E. Ahlsén, J. Andersson} %% UPDATE WITH YOUR NAMES
 \fancyfoot[C]{\thepage}
 
-\begin{document}
+
 
 \maketitle
 \thispagestyle{fancy}
