More minor changes

--- a/report/ai15_group61_report.tex
+++ b/report/ai15_group61_report.tex
@@ -17,9 +17,9 @@
 Group 61\\ \\[0.05cm]
 \begin{tabular}{cccc}
 K. Hannesson & J. Jóhannsson & E. Ahlsén & J. Andersson\\
-August 20 & January 12 & February 9 & February 10 \\
-1982 & 1984 & 1988 & 1984 \\
-{\small hannesso@kth.se} & {\small jokull@kth.se} & {\small edvarda@kth.se} & {\small jonand8@kth.se} \\ \\[0.05cm]
+\normalsize{August 20} & \normalsize{January 12} & \normalsize{February 9} & \normalsize{February 10} \\
+\normalsize{1982} & \normalsize{1984} & \normalsize{1988} & \normalsize{1984} \\
+{\normalsize hannesso@kth.se} & {\small jokull@kth.se} & {\small edvarda@kth.se} & {\small jonand8@kth.se} \\ \\[0.05cm]
 \includegraphics[width=0.13\linewidth]{photo_Kristofer} &
 \includegraphics[width=0.13\linewidth]{photo_Jokull} &
 \includegraphics[width=0.13\linewidth]{photo_Edvard} &
