--- a/report/ai15_group61_report.tex
+++ b/report/ai15_group61_report.tex
@@ -170,7 +170,7 @@ The models used in the experiments, we later realized, were implemented in a way
 We will use SM* and IGM* to refer to the implementation of the Semantic model and Inferred grammar model used in the experiment.
 
 \subsubsection{Semantic model}
-The Semantic model was inconsistent with the specifications in that it 
+The SM* model was inconsistent with the specifications in that even though the model provides a word along with its tag, these tags were not used for subsequent word generation. Instead the most recent two words were sent in and a POS tagger in the NLTK toolkit used to find their tags. Sometimes the POS tagger did not generate the correct tag and this resulted in the generated results being of inconsistent quality which affected the final results.  
 
 
 \subsubsection{Inferred grammar model}
@@ -181,55 +181,65 @@ IGM* separated grammar and words into two models which were used in sequence to 
 To highlight the inconsistency, IGM generates $(w_3|w_1,w_2,t_3)$, while IGM* generates $(w_3 | t_1,t_2)$.
 
 \subsection{Experimental setup}
+\label{sec:expiremental_setup}
+Model performances were measured using a perception test in the form of an online survey with 30 questions. Both models were used to generate 3 sentences for each of the 4 smoothing methods.  Additionally 3 sentences were hand-picked from the Brown corpus and 3 sequences of random words generated to serve as the ``human'' and ``baseline'' models against which our models would be compared. Each group of 3 was picked by generating a few hundred sentences and picking the top 3 with the best perplexity score. The number of sentences was limited to 30 because in test trials a higher number resulted in participants not having the patience to finish. 
 
-\begin{figure}[t!]%
-    \centering
-    \subfloat[Performance of each model as well as the real and baseline sentences]{{\includegraphics[width=4.5cm]{results/boxplot_resultsByModel} }}%
-    \qquad
-    \subfloat[Performance of each model and smoothing method]{{\includegraphics[width=8cm]{results/boxplot_resultsByModelAndSmoothing} }}%
-    \qquad
-    \caption{Model performances compared with respect to smoothing methods. Diamond represents means.}%
-    \subfloat[Performance of each model as well as the real and baseline sentences]{{\includegraphics[width=4.5cm]{results/histogram_resultsByModel} }}%
-    \qquad
-    \subfloat[Performance of each model and smoothing method]{{\includegraphics[width=8cm]{results/histogram_resultsByModelAndSmootingMethod} }}%
-    \caption{Model performances compared with respect to smoothing methods. Dotted lines represent means.}%
-    \label{fig:example}%
-\end{figure}
+Participants were asked to rate on a scale of 1-5 how closely they felt the sentences resembled human writing. As a guideline they were told that if a sentence appeared to be random words it might receive a 1, if it showed some signs of coherence it might receive a 3, and if it looked like a person wrote it then it would receive a 5. To make the test as fair as possible the sentences were presented to each participant in a random order. 
 
-Each model was used to generate 5 sentences per smoothing method for a total of 40 sentences. 5 sentences were also picked from the Brown corpus. All the sentences were mixed together randomly and then added to a survey which allowed participants to rate each sentence on a scale of 1 to 5 whether it was created by a human or a computer, with 1 representing definitely a human and 5 definitely a computer. Apart from the sentence scoring we only asked if the participants were native English speakers or not. The survey solution chosen was QuestionPro.
+The survey platform used was Google Forms and the results where pulled into R for processing and graphical representation.
 
-\subsection{Experiment ...}
 
-Here we talk about how which smoothing technique worked best for us why the results were the way they were. We also explain why the model containing the grammar was better than the inferred grammar one.
 
 \begin{figure}
-\centering
-\includegraphics[width=0.8\linewidth]{histogram}
-\caption{A description that makes browsing the paper easy and clearly
-describes what is in the picture. Make sure that the text in the figure
-is large enough to read and that the axes are labelled.}
-\label{fig:histogram}
+  \centering
+    \subfloat[Performance of each model as well as the human and baseline sentences]    
+    {{\label{fig:hist1}\includegraphics[height=5cm]{results/histogram_resultsByModel} 
+    }}%
+    \qquad
+    \subfloat[Performance of each model and smoothing method]{{\label{fig:hist2}\includegraphics[height=5cm]{results/histogram_resultsByModelAndSmootingMethod} 
+    }}%
+    \caption{Density histograms of model scores in the perception test. Dotted lines represent means.}%
+    \label{fig:histograms}%
 \end{figure}
 
+\begin{figure}%
+    \centering
+    \subfloat[Performance of each model as well as the real and baseline sentences]{{\label{fig:boxplot1}\includegraphics[height=6.2cm]{results/boxplot_resultsByModel} }}%    
+    \qquad
+    \subfloat[Performance of each model and smoothing method]{{\label{fig:boxplot2}\includegraphics[height=6cm]{results/boxplot_resultsByModelAndSmoothing} }}%
+    \qquad
+    \caption{Boxplots of model scores in the perception test. Diamonds represent   means.}%
+  \label{fig:boxplots}
+\end{figure}
 
-
-\begin{table}
-\begin{center}
-\begin{tabular}{|c|c|c|}
-\hline
-Bla bla & Bla bla & Bla bla \\ \hline
-42 & 42 & 42 \\ \hline
-42 & 42 & 42 \\ \hline
+\begin{table}[]
+\centering
+\caption{Model performance statistics from perception test}
+\label{tab:modelStats}
+\begin{tabular}{@{}lllll@{}}
+\toprule
+Model            & Smoothing Method & Mean & Median & Mode \\ \midrule
+Semantic Model   & MLE              & 3.5  & 4      & 5    \\
+Semantic Model   & Laplace          & 2.4  & 2      & 1    \\
+Semantic Model   & ELE              & 2.8  & 3      & 2    \\
+Semantic Model   & Good Turing      & 3.6  & 4      & 4    \\
+Inferred Grammar & MLE              & 1.4  & 1      & 1    \\
+Inferred Grammar & Laplace          & 1.8  & 1      & 1    \\
+Inferred Grammar & ELE              & 1.3  & 1      & 1    \\
+Inferred Grammar & Good Turing      & 1.4  & 1      & 1    \\ \bottomrule
 \end{tabular}
-\caption{A description that makes browsing the paper easy and clearly
-describes what is in the table.}
-\label{tab:results}
-\end{center}
 \end{table}
 
-What answer was found to the research question; what did the study find? Was the tested hypothesis true?
-=======
-\subfile{experiment_results}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\subsection{Results}
+\label{sec:results}
+The results for the two implemented models, as detailed in section~\ref{sec:method}, were very different. The density distribution of answers can been seen in figures~\ref{fig:hist1} and~\ref{fig:hist2} which show that the results for SM* are rather evenly spread while the results for IGM* are are very skewed with most scores very low. The scores of the human and baseline sentences very high and very low, as was expected. The performance differences become even clearer in figure~\ref{fig:histograms} where we see that IGM* performs no better than the baseline, in fact the baseline has a higher mean score. Looking at the performance of different smoothing methods in figure~\ref{fig:hist2} we see that the Laplace and ELE smoothing methods result in poorer performance than MLE and Good Turing. MLE and Good Turing perform very similarly, but the Good Turing distribution is densest in the 4 and 5 scores while MLE has a greater spread. Good Turing therefore has the best performance according to the perception test.
+
+The IGM* model performs abysmally no matter the smoothing method, with only Laplace smoothing pulling the mean score slightly up.
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
