new section 0, 1 and 2

--- a/report/ai15_group61_report.tex
+++ b/report/ai15_group61_report.tex
@@ -47,9 +47,7 @@ K. Hannesson & J. Jóhannsson & E. Ahlsén & J. Andersson\\
 \thispagestyle{fancy}
 
 \begin{abstract}
-We present two different techniques for creating n-gram models for natural language processing. Our main focus was creating sentences that would qualify as human generated sentences. We investigate how different type of smoothing affect the outcome by doing a perception test.
-
-Our results show that using different smoothing algorithms can change the results remarkably and the way people perceive the sentences. Finally results show that XXXXXX smoothing algorithm outperform others algorithms evaluated.
+In this paper, two different approaches to constructing n-gram models for Natural Language Generation (henceforth NLG) are discussed and contrasted. Our main focus was creating text that would qualify as human generated. We also investigate how different types of smoothing techniques impact the performance of the models. The two models were evaluated via a perception test in the form of an online survey. Unfortunately, errors were identified after the survey was administered, which effectively make the results inconclusive in predicating anything about our models.
 \end{abstract}
 
 
@@ -87,7 +85,8 @@ Our results show that using different smoothing algorithms can change the result
 
 
 \section{Outline}
-This paper is structured as follows: In Section 1 we talk about XXXXXXX. In Section~\ref{sec:relwork} we list out how this project relates to other projects and what we did use from those projects.In Section~\ref{sec:method} we go into details about the implementation of the two models and list up which techniques we used. In Section~\ref{sec:exps} we explain how experiment were done the results.In Section~\ref{sec:summary} we summarize the most important results of this work.Finally in Section~\ref{sec:contributions} we list up the contribution of each team member to the project.
+Beginning in \ref{sec:relwork}, we start off by briefly describing how our project relates to other projects in the field from which we gathered inspiration, and what we learned and applied from those. \ref{sec:method} details the characteristics of our proposed models, and hypothesizes about their functionality. It also contains a brief introduction to the different smoothing techniques employed. \ref{sec:exps}, the design and outcome of the experiment is accounted for, and in \ref{sec:summary} we try to summarize the results of our work. Finally, \ref{sec:contributions} recounts the contributions of the different members of the team to the project.
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
