Reviewed section 3 and 4

--- a/report/smoothing-goodturing.tex
+++ b/report/smoothing-goodturing.tex
@@ -1,5 +1,5 @@
 \documentclass[ai15_group61_report.tex]{subfiles}
 \begin{document}
-The Simple Good-Turing smoothing technique is a discounting algorithm, slightly more complex than Laplace smoothing \cite{Jurafsky2000}. The Simple-Good Turing Smoothing technique is not used in practice, rather it is used as an intermediate step in more advanced smoothing algorithms \cite{chen-smoothing}. In practice, this technique uses the frequency of singletons (N-grams with a single occurrence) to re-estimate the probability count of the missing mass (zero count N-grams). Simple Good-Turing Smoothing differs from Good-Turing Smoothing in that for each missing mass, the bin size is computed, and then smoothed before calculated the adjusted count to fill in any zeros in the sequence \cite{Jurafsky2000}. Despite claims made in \cite{chen-smoothing}, we felt it would be instructive to let the algorithm stand on its own and examine the results.  
+The Simple Good-Turing smoothing technique is a discounting algorithm, slightly more complex than Laplace smoothing \cite{Jurafsky2000}. Chen\cite{chen-smoothing} claims that the Simple-Good Turing Smoothing technique is not used in practice, rather it is used as an intermediate step in more advanced smoothing algorithms. In practice, this technique uses the frequency of singletons (N-grams with a single occurrence) to re-estimate the probability count of the missing mass (zero count N-grams). Simple Good-Turing Smoothing differs from Good-Turing Smoothing in that for each missing mass, the bin size is computed, and then smoothed before calculating the adjusted count to fill in any zeros in the sequence \cite{Jurafsky2000}. Despite claims made by Chen, we felt it would be instructive to let the algorithm stand on its own and examine the results.
 
 \end{document}
