--- a/report/conclusion.tex
+++ b/report/conclusion.tex
@@ -9,7 +9,7 @@ The SM* was much closer to specification, but still contains the flaw that it us
 
 
 \subsection{N-gram count}
-In determining the order of our models, we found the output produced by quadgram models were suspiciously close to human authored text. Indeed the authors of \cite{Jurafsky2000} state that the n-gram probability matrices become sparse as order increases, diminishing the set of possible continuations to approximately one. This effectively generates sentences which are found verbatim in the corpus. After encountering this phenomenon, it was evident that using the Brown corpus with trigram models was the best trade off between data density and model order.  
+In determining the order of our models, we found the output produced by quadgram models were suspiciously close to human authored text. Indeed the authors of \cite{Jurafsky2000} state that the N-gram probability matrices become sparse as order increases, diminishing the set of possible continuations to approximately one. This effectively generates sentences which are found verbatim in the corpus. After encountering this phenomenon, it was evident that using the Brown corpus with trigram models was the best trade off between data density and model order.  
 
 \subsection{Improvements}
 Since our results were invalidated by the erroneous implementations of our models, the models have been reimplemented, this time to specification, and could be employed in another perception test. As far as the survey goes, we think that it was properly designed, and can be used again with new respondents. We could also explore how to utilize the functionality of the different smoothing techniques by making explicit the bin-size of the frequency distributions. That is, to say something about how many zero counts are leaving room for, thereby accounting for the missing mass.
