--- a/report/related_works.tex
+++ b/report/related_works.tex
@@ -9,7 +9,7 @@ Several textbooks explore the topic of language modeling using N-grams and part 
 
 The Natural Language Tool Kit (NLTK) boosted development productivity through a suite of tools such as probability distribution classes, N-gram decomposition functions, corpora and corpora importing utilities, and speech tagging. We extensively referenced \cite{NLTKBook09} for guidance in use of the NLTK. 
 
-Continuing on the topic of tutorials; the study of smoothing techniques, perplexity, and n-gram models provided by Jurafsky and Martin\cite{Jurafsky2000} were referenced in verifying the output produced by our text generation techniques. For example, our output produced by quad-gram models were suspiciously close to human authored text. Indeed the authors state that the n-gram probability matrices become sparse as order increases, diminishing the set of possible continuations to approximately one. This effectively generates sentences which are found verbatim in the corpus. This discussion influenced our decision to use trigrams in our models. 
+Continuing on the topic of tutorials; the study of smoothing techniques, perplexity, and N-gram models provided by Jurafsky and Martin\cite{Jurafsky2000} were referenced in verifying the output produced by our text generation techniques. For example, our output produced by quad-gram models were suspiciously close to human authored text. Indeed the authors state that the N-gram probability matrices become sparse as order increases, diminishing the set of possible continuations to approximately one. This effectively generates sentences which are found verbatim in the corpus. This discussion influenced our decision to use trigrams in our models. 
 
 %Further, perplexity scores are a quantitative correlation to readability, writes Jurafsky et al.  
 
