Typos in Report fixed. Unsaved changes to analytics saved.

--- a/report/ai15_group61_report.tex
+++ b/report/ai15_group61_report.tex
@@ -47,7 +47,7 @@ K. Hannesson & J. Jóhannsson & E. Ahlsén & J. Andersson\\
 \thispagestyle{fancy}
 
 \begin{abstract}
-In this paper, two different approaches to constructing n-gram models for Natural Language Generation (henceforth NLG) are discussed and contrasted. Our main focus was creating text that would qualify as human generated. We also investigate how different types of smoothing techniques impact the performance of the models. The two models were evaluated via a perception test in the form of an online survey. Unfortunately, errors were identified after the survey was administered, which effectively make the results inconclusive in predicating anything about our models.
+In this paper, two different approaches to constructing N-gram models for Natural Language Generation (henceforth NLG) are discussed and contrasted. Our main focus was creating text that would qualify as human generated. We also investigate how different types of smoothing techniques impact the performance of the models. The two models were evaluated via a perception test in the form of an online survey. Unfortunately, errors were identified after the survey was administered, which effectively make the results inconclusive in predicating anything about our models.
 \end{abstract}
 
 
